# snowscrape

./: .clinerules  .env.example  .gitignore  .lighthouserc.json  .npmrc  ASYNC_SCRAPER_README.md  Dockerfile  OBSERVATORY_INTEGRATION.md  README.md  TIER2_PROXY_SETUP.md  cache.py  conftest.py  connection_pool.py  crawl_manager.py  crawler.py  deploy-js-renderer.sh  docker-compose.yml  handler.py  job_manager.py  js_renderer.py  logger.py  metrics.py  middleware.ts  next.config.mjs  observatory_client.py  openapi.yml  package-lock.json  package.json  pdf_handler.py  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  pytest.ini  rate_limiter.py  register_with_observatory.py  requirements-dev.txt  requirements.txt  scraper_preview.py  scraper_preview_async.py  sentry.client.config.ts  (+16 more)
.claude/: CLAUDE.md
.serverless/: meta.json
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
backend/: .gitignore  .serverlessignore  conftest.py  format_converter.py  handler.py  job_manager.py  package.json  pdf_handler.py  proxy_manager.py  pyproject.toml  register_with_observatory.py  scraper_preview.py  sst.pyi  tiered_scraper.py  utils.py  webhook_delivery_handler.py
backend/tests/integration/: test_handlers.py
backend/tests/unit/: test_job_manager.py  test_security.py  test_utils.py
components/: ConfirmDialog.tsx  ConnectionStatus.tsx  EmptyState.tsx  ErrorFallback.tsx  JobCard.tsx  JobCardSkeleton.tsx  JobModal.tsx  LoadingSkeleton.tsx  LoadingSpinner.tsx  NotificationCenter.tsx  OnboardingTour.tsx  PageHeader.tsx  (+6 more)
(+159 files in other folders)
